# document-describer-parser

./: .gitignore  README.md  pyproject.toml
src/document_describer_parser/: __init__.py  _converter.py  cli.py  describer.py  main.py  prompts.py
src/document_describer_parser/describer_models/: models_registry.py  pali_gemma_describer.py
