[project]
name = "document-describer-parser"
version = "0.1.0"
description = "PDF document parser pipeline with VLM-powered figure/table description"
readme = "README.md"
authors = [
    { name = "Dominik Galus", email = "dominikgalus9@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "docling>=2.0",
    "transformers>=4.40",
    "torch>=2.0",
    "Pillow>=10.0",
    "tyro>=1.0.14",
]

[project.scripts]
parse-doc = "parse_doc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
